# stm32tool

./: Cargo.toml  README.md
.github/workflows/: build-check.yml  publish.yml
src/: generate_gitignore.rs  main.rs  patches.rs  stm32cubemx.rs  utils.rs
src/configs/create-script/STM32F407VETx/: 01.tmpl  02.tmpl
src/configs/create-script/STM32H723VETx/: 01.tmpl  02.tmpl  default.mmt.tmpl
src/configs/gitignore/: auto_generated.toml  build_artifacts.toml  ide.toml  stm32cubemx.toml
src/creators/: mod.rs  stm32f407vetx.rs  stm32h723vetx.rs
src/initializers/: clion.rs  cmake.rs  eide.rs  mod.rs
src/templates/: eide-config.tmpl  eide.yml
